# CDC_ECOMMERCE_DATA_ENG

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/cdc_ecommerce/: __main__.py  cli.py  config.py  pipeline.py
src/cdc_ecommerce/bronze/: __init__.py  writer.py
src/cdc_ecommerce/gold/: __init__.py  builder.py
src/cdc_ecommerce/ingestion/: __init__.py  generator.py
src/cdc_ecommerce/quality/: checks.py  schema.py
src/cdc_ecommerce/silver/: __init__.py  merge.py
src/cdc_ecommerce/utils/: io.py  logging.py  time.py
tests/: conftest.py  test_generator_window.py  test_gold_metrics.py  test_silver_merge.py
