[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdc-ecommerce-data-eng"
version = "0.1.0"
description = "CDC incremental pipeline with Medallion architecture for e-commerce"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Felip" }
]
dependencies = [
  "pandas>=2.2,<3",
  "duckdb>=1.1,<2",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[project.scripts]
cdc-ecommerce = "cdc_ecommerce.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
